add, edit, del contact

--- a/src/components/Pages/Сontacts/ContactEditAdd/ContactEditAdd.scss
+++ b/src/components/Pages/Сontacts/ContactEditAdd/ContactEditAdd.scss
@@ -1,6 +1,6 @@
 @import '../../../../assets/styles/mainStyle.scss';
 
-.contactAdd-container {
+.contactEditAdd-container {
   &-btnGroup {
     @include formBtnGroup;
   }
