--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -8,7 +8,7 @@
   border-radius: 25px;
 
   &:hover {
-    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 5px 10px 2px $shadow;
   }
 }
 
